--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "uuid": "^9.0.1"
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
+
 }
