--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
+    "morgan": "^1.10.0",
     "dotenv": "^16.3.1"
   }
 
