--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1"
+    "morgan": "^1.10.0"
   }
-
 }
